--- a/Projeto rpg/Projeto rpg.csproj
+++ b/Projeto rpg/Projeto rpg.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.0" />
-    <PackageReference Include="Vlc.DotNet.Core" Version="3.1.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
 </Project>
